<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:textSize="20sp"
        android:text="@string/label_title"
        app:layout_constraintEnd_toStartOf="@+id/editTextTitle"
        app:layout_constraintTop_toTopOf="@+id/editTextTitle" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:paddingStart="7dp"
        android:paddingEnd="0dp"
        android:textSize="20sp"
        android:ems="10"
        android:hint="@string/input"
        android:inputType="text"
        android:autofillHints="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/label_content"
        app:layout_constraintStart_toStartOf="@+id/textViewTitle"
        app:layout_constraintTop_toTopOf="@+id/editTextContent" />

    <EditText
        android:id="@+id/editTextContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingStart="7dp"
        android:paddingEnd="0dp"
        android:textSize="20sp"
        android:ems="10"
        android:hint="@string/input"
        android:inputType="text"
        android:autofillHints="no"
        app:layout_constraintStart_toStartOf="@+id/editTextTitle"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="109dp"
        android:layout_height="71dp"
        android:layout_marginTop="92dp"
        android:text="@string/save"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextContent">

        <RadioButton
            android:id="@+id/radioHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:text="@string/priority_high"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:text="@string/priority_medium"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:text="@string/priority_low"
            android:enabled="false"
            android:textSize="20sp" />

    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>
